fluc_sources += [
  'bwmeter/fluc_bwmeter_base.c',
  'bwmeter/fluc_bwmeter.c',
  'bwmeter/fluc_bwmeter_sock.c',
  'threads/fluc_barrier.c',
  'threads/fluc_monitor.c',
  'threads/fluc_mutex.c'
]
fluc_include_directories += [include_directories('.')]
fluc_configuration_data.set('FLUC_USE_THREADS', 1)
